--- a/Resturangssidan/Meny.html
+++ b/Resturangssidan/Meny.html
@@ -53,122 +53,176 @@
 		   <p6> Under denna ruta kan du se vad vi här på Gustavsson's Gourmet har att erbjuda! </p6>
 	  </section>
 
-    <section id="Grillen">
+    <section class="huvudrätt" id="Grillen">
        <p5> FRÅN GRILLEN </p5>
     </section>
 
-    <section id="Halloumiburgare">
+    <section class="rätt"  id="Halloumiburgare">
 	     <h6>
 		       Halloumiburgare
        </h6>
-		   <p6> Halloumiburgare och ugnsbakad sötpotatis. Serveras med portobello svamp samt guacamole. </p6>
+		   <p6> Halloumiburgare och ugnsbakad sötpotatis. Serveras med portobello svamp. </p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 129 :- </p6>
 	  </section>
 
-    <section id="Plankstek">
+    <section class="rätt" id="Plankstek">
 	     <h6>
 		       Plankstek
        </h6>
 		   <p6> Nötkött och duchessepotatis.
          Serveras med chilibearnaise.</p6>
+         <p> </p>
+         <p> </p>
+         <p> </p>
+         <p6> Kostnad: 149 :- </p6>
 	  </section>
 
-    <section id="Entrecote">
+    <section class="rätt"  id="Entrecote">
 	     <h6>
 		       Entrecôte à la Monsieur
        </h6>
 		   <p6> Pepparkryddad entrecôte och pommes frites. Serveras med grösaker samt brunsås. </p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 199 :- </p6>
 	  </section>
 
-    <section id="Fisk">
+    <section class="huvudrätt"  id="Fisk">
        <p5> FRÅN HAVET </p5>
     </section>
 
-    <section id="Laxtallrik">
+    <section class="rätt"  id="Laxtallrik">
        <h6>
            Laxtallrik
        </h6>
        <p6> Kallrökt och gravad regnbågslax. Serveras med hovmästarsås, sallad och kokt potatis. </p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 149 :- </p6>
     </section>
 
-    <section id="Rödtunga">
+    <section class="rätt"  id="Rödtunga">
        <h6>
            Helstekt rödtunga
        </h6>
        <p6> Helstekt rödtunga och dillpotatis. Serveras med pepparrot samt skirat smör.</p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 129 :- </p6>
     </section>
 
-    <section id="Hummersoppa">
+    <section class="rätt"  id="Hummersoppa">
        <h6>
            Hummersoppa
        </h6>
        <p6> Krämig hummersoppa. Serveras med brödkrutonger. </p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 149 :- </p6>
     </section>
 
-    <section id="Sallad">
+    <section class="huvudrätt" id="Sallad">
        <p5> SALLADER </p5>
     </section>
 
-    <section id="Ceasarsallad">
+    <section class="rätt"  id="Ceasarsallad">
 	     <h6>
 		       Ceasarsallad
        </h6>
 		   <p6> Ceasarsallad toppad med grillad kyckling samt knaperstekt bacon. </p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 149 :- </p6>
 	  </section>
 
-    <section id="Räksallad">
+    <section class="rätt"  id="Räksallad">
 	     <h6>
 		       Räksallad
        </h6>
 		   <p6> En generös räkssallad med både avokadodipp samt tortillachips vid sidan om.</p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 199 :- </p6>
 	  </section>
 
-    <section id="Romansallad">
+    <section class="rätt"  id="Romansallad">
 	     <h6>
 		       Romansallad
        </h6>
 		   <p6> Krispig romansallad med krutonger. Serveras även med Grana Padano samt cesaredressing. </p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 149 :- </p6>
 	  </section>
 
-    <section id="Barnmeny">
+    <section class="huvudrätt" id="Barnmeny">
        <p5> BARNMENYER </p5>
     </section>
 
-    <section id="Fiskchips">
+    <section class="barnrätt" id="Fiskchips">
 	     <h6>
 		       Fish & Chips
        </h6>
 		   <p6> Sprödbakad torskfilé med pommes, ärtor och citron. Serveras även med remouladsås. </p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 129 :- </p6>
 	  </section>
 
-    <section id="Pannkakor">
+    <section class="barnrätt"  id="Pannkakor">
 	     <h6>
 		       Pannkakor
        </h6>
 		   <p6> 3st pannkakor. Serveras med sylt och grädde, alternativt sylt och vaniljglass. </p6>
+       <p> </p>
+       <p> </p>
+       <p> </p>
+       <p6> Kostnad: 129 :- </p6>
 	  </section>
 
-    <section id="Drycker">
+    <section class="drycker" id="Drycker">
 	     <h6>
 		       DRYCKER
 		   </h6>
 
-       <p> Coca-Cola........................................................... 15 :-</p>
-       <p> Fanta................................................................ 15 :-</p>
-       <p> Pepsi................................................................. 15 :-</p>
-       <p> Sprite................................................................ 15 :-</p>
+       <p> KOSTNAD: 15 :- </p>
+       <p> Coca-Cola</p>
+       <p> Fanta</p>
+       <p> Pepsi </p>
+       <p> Sprite </p>
        <p>                                                                             </p>
        <p>                                                                             </p>
        <p>                                                                             </p>
-       <p> Carlsberg............................................................. 25 :-</p>
-       <p> Corona................................................................ 25 :-</p>
-       <p> Somersby............................................................. 25 :-</p>
-       <p> Sangria............................................................... 35 :-</p>
-       <p> Rosé.................................................................. 35 :-</p>
+       <p>                                                                             </p>
+       <p> KOSTNAD: 25 :- </p>
+       <p> Carlsberg</p>
+       <p> Corona</p>
+       <p> Somersby</p>
        <p>                                                                             </p>
        <p>                                                                             </p>
        <p>                                                                             </p>
-       <p> Kaffe................................................................. 20 :-</p>
-       <p> Té.................................................................... 20 :-</p>
+       <p>                                                                             </p>
+       <p> KOSTNAD: 35 :- </p>
+       <p> Sangria</p>
+       <p> Rosé</p>
+       <p>                                                                             </p>
+       <p>                                                                             </p>
+       <p>                                                                             </p>
+       <p>                                                                             </p>
+       <p> KOSTNAD: 20 :- </p>
+       <p> Kaffe</p>
+       <p> Té</p>
 
 
 	  </section>
